# winter-window

./: .gitattributes  .gitignore  .gitmodules  icon.svg.import  llandscape.gdshader  official_vive2_controller.glb  official_vive2_controller.glb.import  openxr_action_map.tres  project.godot
assets/: BlueSkySkybox.png.import  htc_vive_controller.glb  htc_vive_controller.glb.import  htc_vive_controller_0.jpg.import  htc_vive_controller_1.png.import  htc_vive_controller_2.jpg.import  htc_vive_controller_3.jpg.import
realsense/: CMakeLists.txt  SConstruct
realsense/src/: realsense.cpp  realsense.hpp  register_types.cpp  register_types.h
scenes/: DEPTH.gdshader  Snow_particles.tscn  explosion.tscn  ground.tscn  main.tscn  memoryTexture.gd  randomSeed.gd  realsensetest.gd  realsensetest.tscn  rolling_snowballs.tscn  snowGround.tscn  snowLandscape.tscn  snowball.tscn  snowball_pickable.tscn  testmove.gd  xr_origin_3d.gd
scripts/: camera_adjuster.gd  camera_tracker.gd  controller_substitute.gd  explosion.gd  ground.gd  hand.gd  pick.gd  realsense.gd  right_hand.gd  snowball.gd  snowball_manager.gd
shaders/: convert_depth.glsl  convert_depth.glsl.import  depth.gdshader  random_normals.png.import  snow_deform.glsl  snow_deform.glsl.import  snowball_shader.tres  sparkle_map.png.import  sparkle_map_sparse.png.import  static-normal.jpg.import
sound/: ball crunch 1.mp3.import  ball crunch 2.mp3.import  ball crunch 3.mp3.import  ball crunch 4.mp3.import  step 1.mp3.import  step 10.mp3.import  step 11.mp3.import  step 12.mp3.import  step 13.mp3.import  step 15.mp3.import  (+9 more)
(+20 files in other folders)
